#pragma once

#include "base/any_executor.h"
#include "events/view_events_subscription.h"
#include "node_service/node_children_fetcher.h"
#include "node_service/node_events.h"
#include "node_service/node_fetcher_impl.h"
#include "node_service/node_service.h"
#include "node_service/node_subscription_table.h"
#include "scada/client.h"
#include "scada/view_service.h"

#include <list>
#include <set>
#include <unordered_map>

namespace scada {
class MonitoredItemService;
struct ModelChangeEvent;
}  // namespace scada

namespace v3 {

class NodeFetcher;
class NodeModelImpl;
struct NodeModelImplReference;

struct NodeServiceImplContext {
  AnyExecutor executor_;
  scada::MonitoredItemService& monitored_item_service_;
  const std::shared_ptr<NodeFetcher> node_fetcher_;
  const ViewEventsProvider view_events_provider_;

  // Backs GetScadaNode: a scada::node is a service-bound cursor, so it must
  // carry the session's services (including the monitored-item executor) for
  // read/write/subscribe calls made through it. A default-constructed client
  // yields nodes whose operations complete with Bad_Disconnected.
  const scada::client scada_client_;

  // Bounds the service-owned MRU keep-alive pins that absorb refetch churn
  // from transient GetNode traversals. NodeRef is a non-pinning cursor (see
  // node_ref.h), so this window is the ONLY thing keeping fetched models
  // resident: once the combined read set of the open views exceeds it, the
  // service livelocks in an evict -> auto-refetch -> notify -> re-read cycle
  // (views re-read on every fetch event, evicting each other's nodes), and
  // synchronous walk preconditions (PropertyService) start failing. Size it
  // above any realistic multi-window working set; models are small, so the
  // cost of a large window is negligible next to that failure mode.
  size_t keep_alive_capacity_ = 4096;
};

// Node-model map shared between the service and its models. Models
// unregister themselves on destruction through this shared object, so a
// NodeRef released after the service has been torn down stays safe.
struct NodeModelRegistry {
  // Hashed: only ever point-accessed (find/insert/erase by NodeId), never
  // iterated in order.
  std::unordered_map<scada::NodeId, std::weak_ptr<NodeModelImpl>> nodes;
};

// NodeService implementation using injected coroutine fetch logic.
//
// v3 keeps v2's direct per-node NodeState cache but moves fetch mechanics
// behind NodeFetcher. This makes the service smaller and easier to adapt to
// alternate data sources; unlike v2, it does not own NodeFetcherImpl or
// NodeChildrenFetcher directly.
class NodeServiceImpl : private NodeServiceImplContext,
                        private scada::ViewEvents,
                        public NodeService,
                        public std::enable_shared_from_this<NodeServiceImpl> {
 public:
  explicit NodeServiceImpl(NodeServiceImplContext&& context);
  ~NodeServiceImpl();

  void OnChannelOpened();
  void OnChannelClosed();

  // NodeService
  virtual NodeRef GetNode(const scada::NodeId& node_id) override;

  virtual scada::Status GetStatus(const scada::NodeId& node_id) override;
  virtual NodeFetchStatus GetFetchStatus(const scada::NodeId& node_id) override;
  virtual Awaitable<void> Fetch(
      const scada::NodeId& node_id,
      const NodeFetchStatus& requested_status) override;
  virtual void StartFetch(const scada::NodeId& node_id,
                          const NodeFetchStatus& requested_status) override;
  virtual scada::Variant GetAttribute(const scada::NodeId& node_id,
                                      scada::AttributeId attribute_id) override;
  virtual NodeRef GetDataType(const scada::NodeId& node_id) override;
  virtual NodeRef::Reference GetReference(
      const scada::NodeId& node_id,
      const scada::NodeId& reference_type_id,
      bool forward,
      const scada::NodeId& target_id) override;
  virtual std::vector<NodeRef::Reference> GetReferences(
      const scada::NodeId& node_id,
      const scada::NodeId& reference_type_id,
      bool forward) override;
  virtual NodeRef GetTarget(const scada::NodeId& node_id,
                            const scada::NodeId& reference_type_id,
                            bool forward) override;
  virtual std::vector<NodeRef> GetTargets(
      const scada::NodeId& node_id,
      const scada::NodeId& reference_type_id,
      bool forward) override;
  virtual NodeRef GetAggregate(
      const scada::NodeId& node_id,
      const scada::NodeId& aggregate_declaration_id) override;
  virtual NodeRef GetChild(const scada::NodeId& node_id,
                           const scada::QualifiedName& child_name) override;
  virtual scada::node GetScadaNode(const scada::NodeId& node_id) override;

  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeModelChanged(const scada::NodeId& node_id,
                        const ModelChangedCallback& callback) override;
  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeNodeSemanticChanged(
      const scada::NodeId& node_id,
      const NodeSemanticChangedCallback& callback) override;
  [[nodiscard]] virtual boost::signals2::scoped_connection SubscribeNodeFetched(
      const scada::NodeId& node_id,
      const NodeFetchedCallback& callback) override;
  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeNodeStateChanged(const scada::NodeId& node_id,
                            const NodeStateChangedCallback& callback) override;

  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeModelChanged(const ModelChangedCallback& callback) const override;
  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeNodeSemanticChanged(
      const NodeSemanticChangedCallback& callback) const override;
  [[nodiscard]] virtual boost::signals2::scoped_connection SubscribeNodeFetched(
      const NodeFetchedCallback& callback) const override;
  [[nodiscard]] virtual boost::signals2::scoped_connection
  SubscribeNodeStateChanged(
      const NodeStateChangedCallback& callback) const override;
  virtual size_t GetPendingTaskCount() const override;

  // Number of node models currently resident (pinned by NodeRefs, in-flight
  // fetches, parents, or the keep-alive window). Exposed for diagnostics and
  // residency tests; not part of the NodeService interface.
  size_t GetResidentNodeCount() const { return registry_->nodes.size(); }

 private:
  std::shared_ptr<NodeModelImpl> GetNodeModel(const scada::NodeId& node_id);

  // Like GetNodeModel but also kicks a NodeOnly fetch, so a data read on a
  // cursor whose entry was evicted transparently re-fetches (StartFetch is a
  // no-op once the node is already fetched).
  std::shared_ptr<NodeModelImpl> GetNodeModelForRead(
      const scada::NodeId& node_id);

  // Returns the model for |node_id| if one is already resident, without
  // creating it. Use for update/notification paths that must not grow the
  // node graph as a side effect.
  std::shared_ptr<NodeModelImpl> FindNodeModel(
      const scada::NodeId& node_id) const;

  // Moves |model| to the front of the bounded keep-alive window, possibly
  // releasing the least-recently-used model.
  void TouchKeepAlive(std::shared_ptr<NodeModelImpl> model);

  // Drops the keep-alive pin for |node_id| (e.g. when the node is deleted).
  void RemoveFromKeepAlive(const scada::NodeId& node_id);

  // Spawns the remote fetch coroutines for |node_id|. |model| is pinned by
  // the coroutines so the fetch target cannot be released mid-flight.
  void SpawnFetch(const scada::NodeId& node_id,
                  const NodeFetchStatus& requested_status,
                  std::shared_ptr<NodeModelImpl> model);

  void NotifyModelChanged(const scada::ModelChangeEvent& event);
  void NotifySemanticsChanged(const scada::NodeId& node_id);
  void NotifyNodeStateChanged(const NodeStateChangedEvent& event);

  void OnFetchNode(const scada::NodeId& node_id,
                   const NodeFetchStatus& requested_status);

  void ProcessFetchedNodes(std::vector<scada::NodeState>&& node_states);
  void ProcessFetchedChildren(const scada::NodeId& node_id,
                              scada::ReferenceDescriptions&& references);
  void ProcessFetchErrors(NodeFetchStatuses&& errors);

  // Releases the children-fetch in-flight guard for `node_id`. Called by
  // NodeModelImpl::OnChildrenFetched once its async tail has applied the
  // ChildrenOnly status (or bailed out), so the guard covers the whole
  // fetch-and-apply, not just the browse. Keeping it held for that window is
  // what prevents a re-read-driven re-spawn livelock (see SpawnFetch).
  void ChildrenFetchSettled(const scada::NodeId& node_id);

  // scada::ViewService
  virtual void OnModelChanged(const scada::ModelChangeEvent& event) override;
  virtual void OnNodeSemanticsChanged(
      const scada::SemanticChangeEvent& event) override;

  // Service-wide observers (all nodes).
  NodeSignals signals_;

  // Per-node change subscriptions, materialized only for subscribed nodes.
  // Unlike the pre-table design, a subscription no longer pins the node's
  // model (and subtree) resident: the table stores signals only.
  NodeSubscriptionTable subscription_table_;

  // Models are owned by their holders (NodeRefs, parents, in-flight fetches,
  // the keep-alive window); the registry only tracks them weakly so unused
  // parts of the node graph are released as soon as the last pin drops.
  const std::shared_ptr<NodeModelRegistry> registry_ =
      std::make_shared<NodeModelRegistry>();

  // MRU keep-alive pins; see NodeServiceImplContext::keep_alive_capacity_.
  std::list<std::shared_ptr<NodeModelImpl>> keep_alive_list_;
  std::unordered_map<scada::NodeId,
                     std::list<std::shared_ptr<NodeModelImpl>>::iterator>
      keep_alive_index_;

  // Fetch requested before the channel opened. The model is pinned so the
  // requester's node survives until the fetch can actually start.
  struct PendingNodeFetch {
    NodeFetchStatus status;
    std::shared_ptr<NodeModelImpl> model;
  };

  bool channel_opened_ = false;
  std::map<scada::NodeId, PendingNodeFetch> pending_fetch_nodes_;

  // Nodes with a fetch coroutine currently in flight. NodeModelImpl re-requests
  // a fetch on every StartFetch until the status is fetched; because the
  // injected NodeFetcher is stateless (unlike v2's self-deduping
  // NodeFetcherImpl), without this guard a slow/asynchronous fetch would spawn
  // a duplicate coroutine per call, and each duplicate result would re-run the
  // fetched-node notification path. Entries are cleared when the fetch
  // resolves.
  std::set<scada::NodeId> node_fetch_in_flight_;
  std::set<scada::NodeId> children_fetch_in_flight_;

  std::unique_ptr<IViewEventsSubscription> view_events_subscription_;

  friend class NodeModelImpl;
};

}  // namespace v3
