@startuml node_service_classes
' Core NodeService abstractions and the v3 implementation.
skinparam backgroundColor #FFFFFF
skinparam shadowing false
hide empty members

interface NodeService {
  +GetNode(node_id) : NodeRef
  +SubscribeModelChanged(cb) : scoped_connection
  +SubscribeNodeSemanticChanged(cb) : scoped_connection
  +SubscribeNodeFetched(cb) : scoped_connection
  +SubscribeNodeStateChanged(cb) : scoped_connection
  +GetPendingTaskCount() : size_t
}

class NodeRef <<cursor>> {
  -id_ : NodeId
  -service_ : NodeService* <<non-owning>>
  +attribute(id) : Variant
  +targets() / parent() / type_definition()
  +Fetch(NodeFetchStatus) : Awaitable<NodeRef>
  +StartFetch(NodeFetchStatus)
  +SubscribeNodeStateChanged(cb) : scoped_connection
}

class NodeSignals <<boost::signals2>> {
  +model_changed : signal<ModelChangeEvent>
  +node_semantic_changed : signal<NodeId>
  +node_fetched : signal<NodeFetchedEvent>
  +node_state_changed : signal<NodeStateChangedEvent>
}

class NodeStateChangedEvent <<event>> {
  +node_id : NodeId
  +state : NodeStatePtr <<immutable snapshot>>
  +fetch_status : NodeFetchStatus
}

package "v3" {
  class NodeServiceImpl {
    -registry_ : shared_ptr<NodeModelRegistry>
    -keep_alive_list_ : MRU pins
    -pending_fetch_nodes_ : pinned queue
    -FindNodeModel(id) <<never creates>>
    -GetNodeModel(id) <<creates + touches MRU>>
    -SpawnFetch(id, status, pin)
  }

  class NodeModelImpl {
    -registry_ : shared_ptr<NodeModelRegistry>
    -node_state_ : NodeState <<working state>>
    -child_references_
    -status_ / fetch_status_ / fetch_callbacks_
    -NotifyStateChanged() <<publishes snapshot>>
  }

  class NodeModelRegistry <<shared, weak map>> {
    +nodes : map<NodeId, weak_ptr<NodeModelImpl>>
  }

  interface NodeFetcher {
    +FetchNode(id) : Awaitable<StatusOr<NodeState>>
    +FetchChildren(id) : Awaitable<StatusOr<ReferenceDescriptions>>
  }
}

NodeService <|.. NodeServiceImpl
NodeRef ..> NodeService : forwards to <<non-owning>>
NodeServiceImpl --> NodeModelImpl : owns per-node state
NodeServiceImpl --> NodeModelRegistry : owns
NodeModelImpl --> NodeModelRegistry : unregisters on destruction
NodeModelRegistry ..> NodeModelImpl : weak_ptr
NodeServiceImpl --> NodeFetcher : injected
NodeServiceImpl --> NodeSignals : emits
NodeModelImpl ..> NodeStateChangedEvent : publishes
@enduml
